optimize profile photo

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -2,7 +2,15 @@
   <div class="body">
     <div class="footer-author">
       <a href="/about">
-        <img class="footer-author-photo" src="/about/matthias-endler.jpg" alt="Matthias Endler" />
+        <picture>
+          <source srcset="/about/matthias-endler-2x.avif" type="image/avif">
+          <img 
+            src="/about/matthias-endler-2x.jpg" 
+            alt="Matthias Endler" 
+            class="footer-author-photo"
+            width="80" 
+            height="80">
+        </picture>
       </a>
       <div class="footer-author-text">
         Servus, I'm <a href="/about">Matthias</a>.
