--- a/templates/snippets/codecrafters.html
+++ b/templates/snippets/codecrafters.html
@@ -1,13 +1,7 @@
 <div class="info">
   <p>
-    Thanks for reading! If you're looking to level up your programming skills,
-    check out
-    <a href="https://app.codecrafters.io/join?via=mre">CodeCrafters</a> - it's
-    the platform I genuinely recommend to friends. Try it free and get 40% off
-    paid plans.
-  </p>
-  <p>
-    Full disclosure: I earn a commission on subscriptions, so you'll be
-    supporting my work while improving your coding skills.
+    Good work takes time. If you want to build software that lasts,
+    <a href="https://app.codecrafters.io/join?via=mre">CodeCrafters</a> teaches you to build things from scratch without the shortcuts.
+    Try it free, get 40% off paid plans. I earn a commission on subscriptions.
   </p>
 </div>
