--- a/static/css/main.css
+++ b/static/css/main.css
@@ -674,6 +674,7 @@ footer .body {
     margin: 0 auto;
     flex-direction: column;
     align-items: center;
+    padding: 0 8px;
   }
 
   header {
@@ -705,9 +706,9 @@ footer .body {
   }
   
   pre {
-    width: calc(100% - 32px);
+    width: 100%; 
     padding: 16px;
-    margin: 20px 0;
+    margin: 20px 0px;
   }
 
   blockquote {
