--- a/templates/page.html
+++ b/templates/page.html
@@ -133,26 +133,28 @@
     {{ page.content | safe }}
   </div>
 
-  <ul class="post-links">
-    {% if page.extra.credits %} 
-      <li>
-        Thanks to  
-        {% for credit in page.extra.credits | sort(attribute="name") %}
-          <a href="{{ credit.url }}">{{ credit.name }}</a>
-          {%- if not loop.last %},{% endif %}
-        {% endfor %}
-        for reviewing drafts of this article.
-      </li>
-    {% endif %}
+  {% if page.extra.credits or page.extra.comments or page.extra.translations %}
+    <ul class="post-links">
+      {% if page.extra.credits %} 
+        <li>
+          Thanks to  
+          {% for credit in page.extra.credits | sort(attribute="name") %}
+            <a href="{{ credit.url }}">{{ credit.name }}</a>
+            {%- if not loop.last %},{% endif %}
+          {% endfor %}
+          for reviewing drafts of this article.
+        </li>
+      {% endif %}
 
-    {% if page.extra.comments %}
-      <li>{{ macros::comments(comments=page.extra.comments) }}</li>
-    {% endif %}
+      {% if page.extra.comments %}
+        <li>{{ macros::comments(comments=page.extra.comments) }}</li>
+      {% endif %}
 
-    {% if page.extra.translations %}
-      <li>{{ macros::translations(translations=page.extra.translations) }}</li>
-    {% endif %}
-  </ul>
+      {% if page.extra.translations %}
+        <li>{{ macros::translations(translations=page.extra.translations) }}</li>
+      {% endif %}
+    </ul>
+  {% endif %}
 
   {% if page.taxonomies.tags and ("dev" in page.taxonomies.tags or "oss" in page.taxonomies.tags or "rust" in page.taxonomies.tags) %}
       {% include "snippets/codecrafters.html" %}
