--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@
   --text-color: #2d2d2d;
   --background: #fff;
   --heading-color: #242424;
-  --accent-color: hotpink;
+  --accent-color: #fc218a;
   --surface-color: #fafafa;
   --border-color: #ddd;
   --meta-color: rgba(45, 45, 45, 0.6);
