--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -19,7 +19,7 @@
     
     <div>
       <p>
-        A developer from Bavaria, Germany, mostly writing about software development, Rust, and
+        A developer from Bavaria, Germany 🥨🍺, mostly writing about software development, Rust, and
         open-source.
         There's more info on my <a href="/about">about page</a>.
       </p>
