Rephrase footer section

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -19,16 +19,15 @@
     
     <div>
       <p>
-        A developer from Bavaria, Germany 🥨🍺, mostly writing about software development, Rust, and
-        open-source.
-        There's more info on my <a href="/about">about page</a>.
+        A developer from Bavaria, Germany 🥨🍺, mostly writing about software development and open-source.
       </p>
+      
       <p>
-        For more posts, you can check out my
-        <a href="/archive">blog archive</a>.
-        If you would like to receive future posts
-        automatically, you can subscribe to my
-        <a href="/rss.xml">RSS feed</a>.
+        My company <a href="https://corrode.dev">corrode</a> offers friendly, human Rust consulting and training for teams going from prototype to production.
+      </p>
+      
+      <p>
+        Browse my <a href="/archive">blog archive</a>, subscribe to my <a href="/rss.xml">RSS feed</a>, or learn more <a href="/about">about me</a>.
       </p>
 
       {% include "snippets/social.html" %}
